--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -65,8 +65,6 @@
             {{/select}}
           </select>
           {{localize 'swnr.sheet.ship.ship-class'}}
-
-
         </div>
 
 
@@ -546,7 +544,7 @@
               </div>
             </div>
           </div>
-          </div> <!-- end cost tab>
+          </div> <!-- end cost tab-->
         </section>
       </div>
     </div>
