--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -1,4 +1,197 @@
 <form class="{{cssClass}} -m-2 p-2 bg-gray-200">
   <div>
+    <div class="flex flex-col gap-2">
+      <!-- Grid div for header -->
+      <div class="flex-grow grid grid-cols-6 items-center gap-1">
+        <div class="name  row-span-2 flex flex-col items-center">
+          <img class="profile-img w-24 h-24 object-contain" src="{{actor.img}}" title="{{actor.name}}"
+            data-edit="img" />
+        </div>
+
+        <!-- name -->
+        <div class="name col-span-2 flex flex-col items-center">
+          <input name="name"
+            class="text-2xl col-span-2 px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+            type="text" value="{{actor.name}}" placeholder="{{localize 'swnr.sheet.name'}}" />
+          <span>{{localize 'swnr.sheet.drone.name'}}</span>
+        </div>
+
+        <!--HP-->
+        <div class="hp flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" step="1" name="data.health.value" value="{{actor.data.data.health.value}}"
+              data-dtype="Number" min="0" /><span>/</span><input
+              class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" name="data.health.max" value="{{actor.data.data.health.max}}" step="1" min="1"
+              data-dtype="Number" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.hp'}}
+          </label>
+        </div>
+
+        <!--AC-->
+        <div class="ac flex flex-col items-center">
+          <input
+            class="w-10 text-center px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+            type="number" min="0" name="data.ac" value="{{actor.data.data.ac}}" />
+          <label>{{localize 'swnr.sheet.armor-class'}}</label>
+        </div>
+
+
+        <!--speed-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-8 text-center pl-0.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" step="1" name="data.speed" value="{{actor.data.data.speed}}" data-dtype="Number" min="0" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.ship.speed'}}
+          </label>
+        </div>
+
+        <!--enc-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-8 text-center pl-0.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" step="1" name="data.enc" value="{{actor.data.data.enc}}" data-dtype="Number" min="0" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.drone.enc'}}
+          </label>
+        </div>
+
+
+        <!--range-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-20 text-center pl-0.5 py-1 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              name="data.range" value="{{actor.data.data.range}}" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.drone.range'}}
+          </label>
+        </div>
+
+        <!--tl-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-8 text-center pl-0.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" step="1" name="data.tl" value="{{actor.data.data.tl}}" data-dtype="Number" min="0" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.drone.tl'}}
+          </label>
+        </div>
+
+
+        <!--cost-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
+            <input
+              class="w-20 text-center pl-0.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              type="number" step="1" name="data.cost" value="{{actor.data.data.cost}}" data-dtype="Number" min="0" />
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.ship.cost'}}
+          </label>
+        </div>
+      </div> <!-- end grid div for header -->
+      {{!-- Sheet Body --}}
+
+      <div class="w-full">
+
+        <section class="sheet-body">
+          <div class="grid grid-cols-2 gap-2">
+            <!-- fittings  -->
+            <div class=" fittings pr-0.5">
+
+              <div>
+                <li class="item-titles flexrow">
+                  <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
+                  <div class="item-name flex2">{{localize 'swnr.sheet.ship.fittings'}} </div>
+                  <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
+                  <div class="item-controls">
+                  </div>
+                </li>
+                <ol class="item-list">
+                  {{#each itemTypes.shipFitting as |item id|}}
+                  <li class="item-entry">
+                    <div class="item flexrow" data-item-id="{{item.id}}">
+                      <div class="item-name item-click item-rollable flexrow flex2">
+                        <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
+
+                        <a>{{item.name}}</a>
+                      </div>
+                      <div>
+                        {{item.data.data.effect}}
+                      </div>
+                      <div class="item-controls">
+                        <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
+                          title='{{localize ' swnr.sheet.break-item'}}'>
+                          <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
+                        </a>
+                        <a class="item-control item-toggle-destroy  {{#unless item.data.data.destroyed}}item-working{{/unless}}"
+                          title='{{localize ' swnr.sheet.destroy-item'}}'>
+                          <i
+                            class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
+                        </a>
+                        <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors"
+                          title='{{localize ' swnr.sheet.edit-item'}}'>
+                          <i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors"
+                          title='{{localize ' swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
+
+                      </div>
+                  </li>
+                  {{/each}}
+                </ol>
+              </div>
+            </div> <!-- end fitting left col -->
+            <div class="flex flex-col">
+              <!-- right col-->
+              <!-- Description -->
+              <div class="pr-0.5">
+                <div>
+                  <li class="item-titles flexrow">
+                    <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
+                    <div class="item-name flex2">Description </div>
+                  </li>
+                </div>
+                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
+                  {{editor content=data.data.description target="data.description" button=true
+                  owner=owner editable=editable}}
+                </div>
+              </div>
+              <!-- Mods -->
+              <div class="pr-0.5">
+                <div>
+                  <li class="item-titles flexrow">
+                    <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
+                    <div class="item-name flex2">Mods</div>
+                  </li>
+                </div>
+                <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
+                  {{editor content=data.data.mods target="data.mods" button=true
+                  owner=owner editable=editable}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </form>
