--- a/src/templates/actors/mech-sheet.html
+++ b/src/templates/actors/mech-sheet.html
@@ -13,7 +13,7 @@
           <input name="name"
             class="text-2xl col-span-2 px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
             type="text" value="{{actor.name}}" placeholder="{{localize 'swnr.sheet.name'}}" />
-          <span>Ship Name</span>
+          <span>{{localize 'swnr.sheet.mech.name'}}</span>
         </div>
 
 
