--- a/src/templates/actors/mech-sheet.html
+++ b/src/templates/actors/mech-sheet.html
@@ -87,6 +87,23 @@
             {{localize 'swnr.sheet.ship.cost'}}
           </label>
         </div>
+
+        <!--pilot-->
+        <div class="mass flex flex-col justify-center items-center">
+          <div class="border item border-gray-800 bg-gray-400 mx-auto rounded-md" data-crew-id="{{pilot.id}}" data-crew-name="{{pilot.name}}">
+            <input
+              class="w-20 text-center pl-0.5 py-0.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+               value="{{pilot.name}}" readonly />
+            {{#if pilot}}
+            <a class="item-control mr-1 crew-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
+              class="fas fa-trash"></i></a>
+            {{/if}}
+          </div>
+          <label
+            class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
+            {{localize 'swnr.sheet.mech.pilot'}}  
+          </label>
+        </div>
     </div> <!-- end grid div for header -->
           {{!-- Sheet Body --}}
 
