--- a/src/templates/actors/vehicle-sheet.html
+++ b/src/templates/actors/vehicle-sheet.html
@@ -138,7 +138,10 @@
           <div class="grid grid-cols-2 gap-2">
             <!-- fittings  -->
             <div class=" fittings pr-0.5">
-
+              {{>
+                "systems/swnr/templates/actors/fragments/crew-list.html" 
+                  type=actor.data.data.type crewArray=crewArray
+              }}
               <div>
                 <li class="item-titles flexrow">
                   <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
