--- a/src/templates/dialogs/roll-skill-crew.html
+++ b/src/templates/dialogs/roll-skill-crew.html
@@ -1,16 +1,5 @@
 <form class="bg-gray-300 -m-2 p-2 pb-4 flex gap-1 justify-between">
   <div class="flex flexrow gap-2">
-    <div class="flex flex-col">
-      <label for="">{{localize 'swnr.chat.dicepool'}}: </label>
-      <select name="dicepool"
-        class="w-16 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
-        {{#select skill.pool}}
-        <option value="2d6">2D6</option>
-        <option value="3d6kh2">3D6</option>
-        <option value="4d6kh2">4D6</option>
-        {{/select}}
-      </select>
-    </div>
 
     <div class="flex flex-col">
       <label for="skill">{{localize 'swnr.sheet.skill'}}: </label>
@@ -21,8 +10,7 @@
         {{/each}}
       </select>
     </div>
-
-
+    
     <div class="flex flex-col">
       {{! stat}}
       <label for="stat">{{localize 'swnr.sheet.stats'}}: </label>
@@ -38,6 +26,21 @@
         {{/select}}
       </select>
     </div>
+  </div>
+  <div class="flex flexrow gap-2">
+      <div class="flex flex-col">
+      <label for="">{{localize 'swnr.chat.dicepool'}}: </label>
+      <select name="dicepool"
+        class="w-16 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
+        {{#select skill.pool}}
+        <option value="2d6">2D6</option>
+        <option value="3d6kh2">3D6</option>
+        <option value="4d6kh2">4D6</option>
+        {{/select}}
+      </select>
+    </div>
+
+
 
     <div class="flex flex-col">
       <label for="modifier">{{localize 'swnr.chat.modifier'}}: </label>
