--- a/src/templates/actors/fragments/crew-list.html
+++ b/src/templates/actors/fragments/crew-list.html
@@ -14,6 +14,8 @@
                           <a>{{crew.name}}</a>
                         </div>
                         <div class="item-controls">
+                          <a class="item-control mr-1 crew-roll text-gray-600 hover:text-purple-600 transition-colors" title='{{localize 'swnr.sheet.roll-skill'}}'><i
+                              class="fas fa-dice"></i></a>
                           <a class="item-control crew-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
                               class="fas fa-trash"></i></a>
                         </div>
