--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -136,48 +136,18 @@
           <div class="grid grid-cols-2 gap-2">
             <!-- fittings  -->
             <div class=" fittings pr-0.5">
-
-              <div>
-                <li class="item-titles flexrow">
-                  <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
-                  <div class="item-name flex2">{{localize 'swnr.sheet.ship.fittings'}} </div>
-                  <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
-                  <div class="item-controls">
-                  </div>
-                </li>
-                <ol class="item-list">
-                  {{#each itemTypes.shipFitting as |item id|}}
-                  <li class="item-entry">
-                    <div class="item flexrow" data-item-id="{{item.id}}">
-                      <div class="item-name item-click item-rollable flexrow flex2">
-                        <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
-
-                        <a>{{item.name}}</a>
-                      </div>
-                      <div>
-                        {{item.data.data.effect}}
-                      </div>
-                      <div class="item-controls">
-                        <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
-                          title='{{localize ' swnr.sheet.break-item'}}'>
-                          <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
-                        </a>
-                        <a class="item-control item-toggle-destroy  {{#unless item.data.data.destroyed}}item-working{{/unless}}"
-                          title='{{localize ' swnr.sheet.destroy-item'}}'>
-                          <i
-                            class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
-                        </a>
-                        <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors"
-                          title='{{localize ' swnr.sheet.edit-item'}}'>
-                          <i class="fas fa-edit"></i></a>
-                        <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors"
-                          title='{{localize ' swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
-
-                      </div>
-                  </li>
-                  {{/each}}
-                </ol>
-              </div>
+                  {{>
+                    "systems/swnr/templates/actors/fragments/vehicle-weapon-table.html" 
+                      type=actor.data.data.type actor=actor
+                  }}
+                  {{>
+                    "systems/swnr/templates/actors/fragments/vehicle-fitting-table.html"
+                    type=actor.data.data.type actor=actor
+                  }}
+                  {{>
+                    "systems/swnr/templates/actors/fragments/vehicle-defense-table.html"
+                    type=actor.data.data.type actor=actor
+                  }}
             </div> <!-- end fitting left col -->
             <div class="flex flex-col">
               <!-- right col-->
