adding button for quick add items on vehicle

--- a/src/templates/actors/fragments/vehicle-defense-table.html
+++ b/src/templates/actors/fragments/vehicle-defense-table.html
@@ -3,7 +3,11 @@
     <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
     <div class="item-name flex2">{{localize 'swnr.sheet.ship.defense'}} </div>
     <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
-    <div class="item-controls">
+    <div class="item-controls text-right">
+      <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipDefense">
+        <i class="fas fa-plus"></i>
+      </a> 
     </div>
   </li>
   <ol class="item-list">
