--- a/src/templates/actors/fragments/vehicle-weapon-table.html
+++ b/src/templates/actors/fragments/vehicle-weapon-table.html
@@ -5,7 +5,11 @@
     <div class="item-name flex2">{{localize 'swnr.sheet.ship.weapon'}}</div>
     <div class="item-dmg">{{localize 'swnr.sheet.ship.dmg'}}</div>
     <div class="item-qualities">{{localize 'swnr.sheet.ship.qualities'}}</div>
-    <div class="item-controls">
+    <div class="item-controls text-right">
+      <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipWeapon">
+        <i class="fas fa-plus"></i>
+      </a> 
     </div>
   </li>
   <ol class="item-list">
