--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -738,7 +738,11 @@
                     <div class="item-strain text-center">{{localize 'swnr.sheet.cyberware.strain'}} </div>
                     
                     <div class="item-effect pr-2.0">{{localize 'swnr.sheet.description'}}</div>
-                    <div class="item-controls text-center flex-shrink">
+                    <div class="item-controls flex-shrink text-right">
+                      <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+                        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="cyberware" data-item-name="Cyberware">
+                        <i class="fas fa-plus"></i>
+                      </a> 
                     </div>
                   </li>
                   <ol class="item-list">
