--- a/src/templates/actors/fragments/vehicle-fitting-table.html
+++ b/src/templates/actors/fragments/vehicle-fitting-table.html
@@ -5,7 +5,7 @@
     <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
     <div class="item-controls text-right">
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipFitting">
+        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipFitting"  data-item-name="Fitting">
         <i class="fas fa-plus"></i>
       </a> 
     </div>
