--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -642,7 +642,18 @@
               ></div>
             </div>
           </div>
-          <div class="flex flex-wrap gap-2">
+          <div> 
+            {{> "systems/swnr/templates/actors/fragments/item-table.html" 
+                itemList=itemTypes.weapon itemType="weapon" name="Weapon"
+            }}
+            {{> "systems/swnr/templates/actors/fragments/item-table.html" 
+                itemList=itemTypes.armor itemType="armor" name="Armor"
+            }}
+            {{> "systems/swnr/templates/actors/fragments/item-table.html" 
+                itemList=itemTypes.item itemType="item" name="Item"
+            }}
+          </div>
+          {{!-- <div class="flex flex-wrap gap-2">
             {{#each itemTypes.weapon as |item id|}}
             <div class="w-36 flex-grow">
             {{> "systems/swnr/templates/actors/fragments/item.html" type="character" item=item id=id}}
@@ -658,7 +669,7 @@
             {{> "systems/swnr/templates/actors/fragments/item.html" type="character"  item=item id=id}}
             </div>
             {{/each}}
-          </div>
+          </div> --}}
         </div>
         <div class="tab skills" data-group="primary" data-tab="skills">
           {{#if (ne itemTypes.skill.length 0)}}
@@ -709,7 +720,7 @@
                     <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
                     <div class="item-name">{{localize 'swnr.sheet.tabs.foci'}} </div>
                     <div class="item-effect">{{localize 'swnr.sheet.description'}}</div>
-                    <div class="item-controls w-20">
+                    <div class="item-controls w-20 text-right">
                     </div>
                   </li>
                   <ol class="item-list">
@@ -723,7 +734,7 @@
                         <div clas="">
                           {{trim item.data.data.description 60}}
                         </div>
-                        <div class="item-controls w-20">
+                        <div class="item-controls w-20  text-right">
                           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                             <i class="fas fa-edit"></i></a>
                           <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
@@ -763,7 +774,7 @@
                         <div class="item pr-2.0">
                           {{item.data.data.effect}}
                         </div>
-                        <div class="item-controls text-center flex-shrink">
+                        <div class="item-controls text-right flex-shrink">
                           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                             <i class="fas fa-edit"></i></a>
                           <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
@@ -772,7 +783,7 @@
                     </li>
                     {{/each}}
                   </ol>
-                </div><!--end table-->
+              </div><!--end table-->
             </div>
           </div>
         </div> <!-- end other /foci tab-->
