click to render char sheet

--- a/src/templates/actors/fragments/crew-list.html
+++ b/src/templates/actors/fragments/crew-list.html
@@ -11,7 +11,7 @@
                     <li class="item-entry">
                       <div class="item flexrow" data-crew-id="{{crew.id}}" data-crew-name="{{crew.name}}">
                         <div class="item-name flexrow">
-                          <a>{{crew.name}}</a>
+                          <a class="crew-show">{{crew.name}}</a>
                         </div>
                         <div class="item-controls">
                           <a class="item-control mr-1 crew-roll text-gray-600 hover:text-purple-600 transition-colors" title='{{localize 'swnr.sheet.roll-skill'}}'><i
