--- a/src/templates/actors/mech-sheet.html
+++ b/src/templates/actors/mech-sheet.html
@@ -92,7 +92,7 @@
         <div class="mass flex flex-col justify-center items-center">
           <div class="border item border-gray-800 bg-gray-400 mx-auto rounded-md" data-crew-id="{{pilot.id}}" data-crew-name="{{pilot.name}}">
             <input
-              class="w-20 text-center pl-0.5 py-0.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+              class="w-20 crew-show text-center pl-0.5 py-0.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
                value="{{pilot.name}}" readonly />
             {{#if pilot}}
             <a class="item-control mr-1 crew-roll text-gray-600 hover:text-purple-600 transition-colors" title='{{localize 'swnr.sheet.roll-skill'}}'><i
