--- a/src/templates/actors/fragments/vehicle-fitting-table.html
+++ b/src/templates/actors/fragments/vehicle-fitting-table.html
@@ -24,18 +24,16 @@
         </div>
         <div class="item-controls text-right">
           <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
-            title='{{localize ' swnr.sheet.break-item'}}'>
+            title='{{localize 'swnr.sheet.break-item'}}'>
             <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
           </a>
           <a class="item-control item-toggle-destroy  {{#unless item.data.data.destroyed}}item-working{{/unless}}"
-            title='{{localize ' swnr.sheet.destroy-item'}}'>
+            title='{{localize 'swnr.sheet.destroy-item'}}'>
             <i class="fas fa-skull-crossbones {{#unless item.data.data.destroyed}}item-working{{/unless}}"></i>
           </a>
-          <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize '
-            swnr.sheet.edit-item'}}'>
+          <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
             <i class="fas fa-edit"></i></a>
-          <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize '
-            swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
+          <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
 
         </div>
     </li>
