drone fittings and header

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -148,7 +148,7 @@
             </div> <!--end flex3 for crew-->
             <div class="flex">
               <!--speed-->
-              <div class="mass flex flex-col justify-center items-center">
+              <div class="speed flex flex-col justify-center items-center">
                 <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
                   <input
                     class="w-8 text-center pl-0.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
